--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color: rgb(247, 79, 1);
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 li {
@@ -20,4 +23,99 @@ li a {
 
 li a:hover {
   background-color: #111;
+}
+
+.coverPic {
+  width: 100%;
+  float: bottom;
+  margin-bottom: 10px;
+}
+
+.coverPic div{
+ position: absolute;
+ bottom: 0;
+ right: 0;
+ background: rgb(255, 0, 0);
+ color: white;
+ margin-bottom: 20px;
+ font-family: sans-serif;
+ font-size: 9px;
+ opacity: 0;
+ visibility: hidden;
+ -webkit-transition: visibility 0s, opacity 0.5s linear; 
+ transition: visibility 0s, opacity 0.5s linear;
+}
+
+/* Hover on Parent Container */
+.coverPic:hover{
+ cursor: pointer;
+}
+
+.coverPic:hover div{
+ width: 150px;
+ padding: 8px 15px;
+ visibility: visible;
+ opacity: 0.7; 
+}
+
+h1,h6 {
+  text-align: center;
+  color: rgb(247, 79, 1);
+}
+
+.section{
+  margin-left: 2em;
+  margin-right: 2em;
+}
+
+.specialText{
+  color: rgb(247, 79, 1);
+}
+
+div.gallery {
+  margin: 5px;
+  border: 1px solid rgb(255, 235, 235);
+  float: left;
+  width: 180px;
+}
+
+div.gallery:hover {
+  border: 1px solid rgb(247, 79, 1);
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.diagram img {
+  width: 50%;
+  height: auto;
+  border: 2px solid rgb(245, 195, 195);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 15px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+div {
+  border: 1px solid #111
 }
