--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ li a:hover {
  opacity: 0.7; 
 }
 
-h1,h6 {
+h1,h2,h6 {
   text-align: center;
   color: rgb(247, 79, 1);
 }
@@ -105,7 +105,7 @@ div.desc {
 /* Create three equal columns that floats next to each other */
 .column {
   float: left;
-  width: 33.33%;
+  width: 30%;
   padding: 15px;
 }
 
@@ -117,5 +117,18 @@ div.desc {
 }
 
 div {
-  border: 1px solid #111
+  border: 0px solid #111
+}
+
+ol.b {
+  list-style-type: square;
+  padding-left: 4em;
+  float: left;
+}
+
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: rgb(247, 79, 1);
+  color: rgb(255, 230, 0);
 }
